# Caric_Vixion_Solution

./: CMakeLists.txt  README.md  package.xml
ws_caric/src/caric_vixion/: CMakeLists.txt  package.xml
ws_caric/src/caric_vixion/include/: Astar.h  baseline_planner.h  general_task_init.h  utility.h
ws_caric/src/caric_vixion/launch/: run.launch
ws_caric/src/caric_vixion/src/: baseline_planner.cpp  general_task_initial.cpp  sliding_window.cpp  sliding_window_independent.cpp
