<?xml version="1.0"?>
<package format="2">
  <name>vixion_solution</name>
  <version>0.0.0</version>
  <description>The vixion_solution package</description>
  <maintainer email="net-dog@todo.todo">net-dog</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>caric_mission</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>caric_mission</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>caric_mission</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <export>

  </export>
</package>
